aggiunta prima parte header

--- a/index.html
+++ b/index.html
@@ -11,10 +11,52 @@
     <title>DropBox</title>
 </head>
 <body>
+    <!-- header -->
     <header>
-        <section class="banner">
-            <div >
+        <!-- aggiunto fixed nel banner -->
+        <section class="banner flex">
+            <div class="container-banner flex left-banner">
+                <!-- inserimento lista link parte sinistra -->
+                <nav>
+                    <ul>
+                        <li class="flex">
+                            <a href="#"> <img src="img/logo-small.png" alt=""></a>
+                            <a href="#">Perche' Dropbox</a>
+                            <a href="#">Funzioni</a>
+                            <a href="#">Piani e Prezzi</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <!-- inserimento lista link parte destra -->
+            <div class="container-banner flex right-banner">
+                <nav>
+                    <ul>
+                        <li  class="flex " >
+                            <a href="#"> Supporto</a>
+                            <a href="#">Contatta l'ufficio vendite</a>
+                            <a href="#">Accedi</a>
+                            <a href="#"><Button> Inizia</Button>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </section>
+        <!-- inizio bottom-header -->
+        <section class="bottom-header big-container">
+            <div class="flex">
+                <div>
+                    <h1>Tutto cio' che ti serve per il lavoro, in un unico posto</h1>
+                    <div class="box-text">
+                        <p>Finalemnte tutti i tuoi strumenti,contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business e' piu' di uno spazio di archiviazione sicuro: e' un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                        <button>Inizia la tua prova gratuita</button>
+                        <p>Annulla in qualsiasi momento</p>
+                    </div>
+                    <div class="box-img">
 
+                    </div>
+                </div>
             </div>
         </section>
     </header>
