--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- cdnjs -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
     <title>DropBox</title>
@@ -14,12 +18,12 @@
     <!-- header -->
     <header>
         <!-- aggiunto fixed nel banner -->
-        <section class="banner flex">
+        <section class="banner flex center">
             <div class="container-banner flex left-banner">
                 <!-- inserimento lista link parte sinistra -->
                 <nav>
                     <ul>
-                        <li class="flex">
+                        <li class="flex center">
                             <a href="#"> <img src="img/logo-small.png" alt=""></a>
                             <a href="#">Perche' Dropbox</a>
                             <a href="#">Funzioni</a>
@@ -32,7 +36,7 @@
             <div class="container-banner flex right-banner">
                 <nav>
                     <ul>
-                        <li  class="flex " >
+                        <li  class="flex center" >
                             <a href="#"> Supporto</a>
                             <a href="#">Contatta l'ufficio vendite</a>
                             <a href="#">Accedi</a>
@@ -44,16 +48,20 @@
             </div>
         </section>
         <!-- inizio bottom-header -->
-        <section class="bottom-header big-container">
-            <div class="flex">
-                <div>
-                    <h1>Tutto cio' che ti serve per il lavoro, in un unico posto</h1>
+        <section>
+            <div class="bottom-header big-container">
+                <h1>Tutto cio' che ti serve per il lavoro, in un unico posto</h1>
+                <div class="flex img-header">    
                     <div class="box-text">
-                        <p>Finalemnte tutti i tuoi strumenti,contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business e' piu' di uno spazio di archiviazione sicuro: e' un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
-                        <button>Inizia la tua prova gratuita</button>
+                        <p>Finalemnte tutti i tuoi strumenti,contenuti e collaboratori sono accessibili dallo stesso posto.Dropbox Business e' piu' di uno spazio di archiviazione sicuro: e' un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                        <div>
+                            <button>Inizia la tua prova gratuita</button>
+                        </div>
                         <p>Annulla in qualsiasi momento</p>
+                        <i class="fa-solid fa-arrow-down"></i>
                     </div>
                     <div class="box-img">
+                        <img src="img/jumbo.png" alt="">
 
                     </div>
                 </div>
