--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             </div>
         </section>
         <!-- inizio bottom-header -->
-        <section>
-            <div class="bottom-header big-container">
+        <section class="section-space">
+            <div class="big-container">
                 <h1>Tutto cio' che ti serve per il lavoro, in un unico posto</h1>
                 <div class="flex img-header">    
-                    <div class="box-text">
+                    <div class="box-header">
                         <p>Finalemnte tutti i tuoi strumenti,contenuti e collaboratori sono accessibili dallo stesso posto.Dropbox Business e' piu' di uno spazio di archiviazione sicuro: e' un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <div>
                             <button>Inizia la tua prova gratuita</button>
@@ -61,14 +61,70 @@
                         <i class="fa-solid fa-arrow-down"></i>
                     </div>
                     <div class="box-img">
-                        <img src="img/jumbo.png" alt="">
-
+                        <img src="img/jumbo.png" alt=" immagine proposta">
                     </div>
                 </div>
             </div>
         </section>
     </header>
+    <!-- INIZIO MAIN -->
+    <main>
+        <section class="section-space ">
+            <div class="small-container">
+                <h2>Trova il piano business che fa per te</h2>
+                <!-- check-box -->
+                <div class="check-box">
+                    <input type="radio">
+                    <label for="fatturazione mensile"> Fatturazione mensile</label>
+                    <input type="radio">
+                    <label for="fatturazione annuale"> Fatturazione annuale</label>
+                </div>
+                <!-- contenitore pagina piccolo 1000px -->
+                <div class="flex main-structure">
+                    <!-- 1box main -->
+                    <div class="main-box">
+                        <div>
+                            <h5><i class="fa-solid fa-user"></i>Singolo</h5>
+                        </div>
+                        <div>
+                            <h4>Professional</h4>
+                            <small>€ 12.00</small>
+                            <small>/mese</small>
+                            <ul>
+                                <li><i class="fa-solid fa-user"></i> 1 utente</li>
+                                <li><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione sicuro</li>
+                                <li><i class="fa-solid fa-share-nodes"></i>Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
+                            </ul>  
+                            <div>
+                                <button>Prova gratis per 30 giorni</button>
+                                <p>oppure <a href="#">acquista ora</a></p>
+                            </div>
+                            <div>
+                                <h6>Punti Salienti del piano</h6>
+                                <ul>
+                                    <li><i class="fa-solid fa-check"></i>invia file fino a 100GB con Dropbox Transfert</li>
+                                    <li><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</li>
+                                </ul>
+                            </div>
+                        </div>  
+                        <div>
 
+                        </div>   
+                    </div>
+                    <div class="main-box">
+
+                    </div>
+                    <div class="main-box">
+
+                    </div>
+                  
+                </div>
+
+            </div>
+        </section>
+    </main>
+    </header>
+    <footer></footer>
     
 </body>
 </html>
