aggiunta pirma parte main

--- a/index.html
+++ b/index.html
@@ -82,19 +82,23 @@
                 <!-- contenitore pagina piccolo 1000px -->
                 <div class="flex main-structure">
                     <!-- 1box main -->
-                    <div class="main-box">
-                        <div>
+                    <div class="vertical-main-box">
+                        <div  class="price">
                             <h5><i class="fa-solid fa-user"></i>Singolo</h5>
                         </div>
-                        <div>
-                            <h4>Professional</h4>
-                            <small>€ 12.00</small>
-                            <small>/mese</small>
-                            <ul>
-                                <li><i class="fa-solid fa-user"></i> 1 utente</li>
-                                <li><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione sicuro</li>
-                                <li><i class="fa-solid fa-share-nodes"></i>Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
-                            </ul>  
+                        <div class="price-information">
+                            <div>
+                                <h4>Professional</h4>
+                                <small>€ 12.00</small>
+                                <small>/mese</small>
+                            </div>
+                            <div>
+                                <ul>
+                                    <li><i class="fa-solid fa-user"></i> 1 utente</li>
+                                    <li><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</li>
+                                    <li><i class="fa-solid fa-share-nodes"></i> Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
+                                </ul>
+                            </div>  
                             <div>
                                 <button>Prova gratis per 30 giorni</button>
                                 <p>oppure <a href="#">acquista ora</a></p>
@@ -102,23 +106,95 @@
                             <div>
                                 <h6>Punti Salienti del piano</h6>
                                 <ul>
-                                    <li><i class="fa-solid fa-check"></i>invia file fino a 100GB con Dropbox Transfert</li>
-                                    <li><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</li>
+                                    <li><i class="fa-solid fa-check"></i> invia file fino a 100GB con Dropbox Transfert</li>
+                                    <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
                                 </ul>
                             </div>
                         </div>  
-                        <div>
-
-                        </div>   
                     </div>
-                    <div class="main-box">
-
+                    <!-- 2box main -->
+                    <div class="vertical-main-box">
+                        <div  class="price">
+                            <h5><i class="fa-solid fa-user"></i>Singolo</h5>
+                        </div>
+                        <div class="price-information">
+                            <div>
+                                <h4>Professional</h4>
+                                <small>€ 12.00</small>
+                                <small>/mese</small>
+                            </div>
+                            <div>
+                                <ul>
+                                    <li><i class="fa-solid fa-user"></i> 1 utente</li>
+                                    <li><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</li>
+                                    <li><i class="fa-solid fa-share-nodes"></i> Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
+                                </ul>
+                            </div>  
+                            <div>
+                                <button>Prova gratis per 30 giorni</button>
+                                <p>oppure <a href="#">acquista ora</a></p>
+                            </div>
+                            <div>
+                                <h6>Punti Salienti del piano</h6>
+                                <ul>
+                                    <li><i class="fa-solid fa-check"></i> invia file fino a 100GB con Dropbox Transfert</li>
+                                    <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                </ul>
+                            </div>
+                        </div>  
                     </div>
-                    <div class="main-box">
-
-                    </div>
-                  
+                    <!-- 3box main -->
+                    <div class="vertical-main-box">
+                        <div  class="price">
+                            <h5><i class="fa-solid fa-user"></i>Singolo</h5>
+                        </div>
+                        <div class="price-information">
+                            <div>
+                                <h4>Professional</h4>
+                                <small>€ 12.00</small>
+                                <small>/mese</small>
+                            </div>
+                            <div>
+                                <ul>
+                                    <li><i class="fa-solid fa-user"></i> 1 utente</li>
+                                    <li><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</li>
+                                    <li><i class="fa-solid fa-share-nodes"></i> Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
+                                </ul>
+                            </div>  
+                            <div>
+                                <button>Prova gratis per 30 giorni</button>
+                                <p>oppure <a href="#">acquista ora</a></p>
+                            </div>
+                            <div>
+                                <h6>Punti Salienti del piano</h6>
+                                <ul>
+                                    <li><i class="fa-solid fa-check"></i> invia file fino a 100GB con Dropbox Transfert</li>
+                                    <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                </ul>
+                            </div>
+                        </div>  
+                    </div>  
                 </div>
+                <!-- box orizzontale -->
+                <div class="orizzontal-main-box">
+                    <div class="price">
+                        <h5><i class="fa-solid fa-hotel"></i>Team</h5>
+                    </div>
+                    <div class="contacts flex">
+                        <div class="big-orizzontal-main-box">
+                            <h4>Enterprise</h4>
+                            <h6>Contatta l'ufficio vendite per i prezzi</h6>
+                            <div>
+                                <p>Soluzione personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
+                            </div>
+                        </div>
+                        <div class="small-orizzontal-main-box">
+                            <button>Contatta l'ufficio vendite</button>
+                        </div> 
+                    </div>
+                </div>
+
+
 
             </div>
         </section>
