--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="big-container">
                 <h1>Tutto cio' che ti serve per il lavoro, in un unico posto</h1>
                 <div class="flex img-header">    
-                    <div class="box-header">
+                    <div class="box-text">
                         <p>Finalemnte tutti i tuoi strumenti,contenuti e collaboratori sono accessibili dallo stesso posto.Dropbox Business e' piu' di uno spazio di archiviazione sicuro: e' un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <div>
                             <button>Inizia la tua prova gratuita</button>
@@ -193,10 +193,33 @@
                         </div> 
                     </div>
                 </div>
-
-
+            </div>
+        </section>
+        <section class="section-space">
+            <div class="small-container">
+                <div class="flex">
+                    <div class="box-img">
+                        <img src="img/partner.png" alt="colleghi di lavoro">
+                        
+                    </div>
+                    <div class="box-text">
+                        <h4>Entra in contatto con un partner Dropbox</h4>
+                        <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui</p>
+                        <div>
+                            <button>Trova un partner</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-space">
+            <div class="small-container">
+                <div>
+                    
+                </div>
 
             </div>
+
         </section>
     </main>
     </header>
