3/6 parti main fatte

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
                 <!-- contenitore pagina piccolo 1000px -->
                 <div class="flex main-structure">
-                    <!-- 1box main -->
+                    <!-- 1box main /    MAIN FIRST PART-->
                     <div class="vertical-main-box">
                         <div  class="price">
                             <h5><i class="fa-solid fa-user"></i>Singolo</h5>
@@ -195,6 +195,7 @@
                 </div>
             </div>
         </section>
+        <!-- section partner       / MAIN SECOND PART -->
         <section class="section-space">
             <div class="small-container">
                 <div class="flex">
@@ -212,14 +213,66 @@
                 </div>
             </div>
         </section>
+        <!-- section dropbox Business     / TIRD PART-->
         <section class="section-space">
             <div class="small-container">
-                <div>
-                    
+                <h2>Esegui piu' operazioni con Dropbox Business</h2>
+                <div class="flex">
+                    <!-- box -->
+                    <div class="vertical-main-box">
+                        <img src="img/business-feature-switching-tools.png" alt="tools">
+                        <div>
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Porta a termine le attivita' quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google,file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+                    </div>
+                    <!-- box  -->
+                    <div class="vertical-main-box">
+                        <img src="img/business-feature-send-files-it.png" alt="tools">
+                        <div>
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Porta a termine le attivita' quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google,file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+                    </div>
+                    <!-- box -->
+                    <div class="vertical-main-box">
+                        <img src="img/business-feature-coordinate-it.png" alt="tools">
+                        <div>
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Porta a termine le attivita' quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google,file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+                    </div>
+                     <!-- box -->
+                     <div class="vertical-main-box">
+                        <img src="img/business-feature-integrations-it.png" alt="tools">
+                        <div>
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Porta a termine le attivita' quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google,file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+                    </div>
+                     <!-- box -->
+                     <div class="vertical-main-box">
+                        <img src="img/business-feature-multi-device.png" alt="tools">
+                        <div>
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Porta a termine le attivita' quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google,file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+                    </div>
+                     <!-- box -->
+                     <div class="vertical-main-box">
+                        <img src="img/business-feature-security.png" alt="tools">
+                        <div>
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Porta a termine le attivita' quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google,file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+                    </div>
                 </div>
-
             </div>
-
+        </section>
+        <section>
+            <div>
+                
+            </div>
         </section>
     </main>
     </header>
