5/6 parti main completate

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </section>
         <!-- inizio bottom-header -->
-        <section class="section-space">
+        <section class="bottom-header-session">
             <div class="big-container">
                 <h1>Tutto cio' che ti serve per il lavoro, in un unico posto</h1>
                 <div class="flex img-header">    
@@ -69,7 +69,7 @@
     </header>
     <!-- INIZIO MAIN -->
     <main>
-        <section class="section-space ">
+        <section class="first-session ">
             <div class="small-container">
                 <h2>Trova il piano business che fa per te</h2>
                 <!-- check-box -->
@@ -81,7 +81,7 @@
                 </div>
                 <!-- contenitore pagina piccolo 1000px -->
                 <div class="flex main-structure">
-                    <!-- 1box main /    MAIN FIRST PART-->
+                    <!-- 1box main /    MAIN FIRST SESSION-->
                     <div class="vertical-main-box">
                         <div  class="price">
                             <h5><i class="fa-solid fa-user"></i>Singolo</h5>
@@ -195,8 +195,8 @@
                 </div>
             </div>
         </section>
-        <!-- section partner       / MAIN SECOND PART -->
-        <section class="section-space">
+        <!-- section partner       / MAIN SECOND SESSION -->
+        <section class="second-session">
             <div class="small-container">
                 <div class="flex">
                     <div class="box-img">
@@ -213,8 +213,8 @@
                 </div>
             </div>
         </section>
-        <!-- section dropbox Business     / TIRD PART-->
-        <section class="section-space">
+        <!-- section dropbox Business     / TIRD SESSION-->
+        <section class="tird-session">
             <div class="small-container">
                 <h2>Esegui piu' operazioni con Dropbox Business</h2>
                 <div class="flex">
@@ -269,11 +269,80 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div>
-                
+        <!-- SECTION CLIENT   /   FOURTH SESSION -->
+        <section class="fourth-session">
+            <div class="small-container">
+                <div class="information">
+                    <h2>Piu' di 500.00 team utilizzano Dropbox Business</h2>
+                    <p><a href="#">Scopri di piu' sui nostri clienti</a></p>
+                </div>
             </div>
         </section>
+        <!-- SECTION PARTNER  / FIFTH SESSION -->
+        <section class="fifth-session">   
+            <div class="flex">
+                <!-- prima colonna -->
+                <div class="column-partner flex">
+                    <div class="box-partner">
+                        <img class="designit" src="img/designit.svg" alt="designit">
+                    </div>
+                    <div class="box-partner">
+                        <img class="arizona" src="img/arizona_state_university.svg" alt="arizona_state_university">
+                    </div>
+                    <div class="box-partner ">
+                        <img class="florida fix-padding" src="img/university_of_florida.svg" alt="university_of_florida">
+                    </div>
+                    <div class="box-partner">
+                        <img class="topps" src="img/topps.svg" alt="topps">    
+                    </div>   
+                </div>
+                <!--seconda colonna  -->
+                <div class="column-partner">
+                    <div class="second-column">
+                        <div>
+                            <img class="boh" src="img/designit.svg" alt="designit">
+                        </div>
+                        <p>" I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna e' facile quanto Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna e' facile quanto Dropbox Paper""
+                            <br>
+                            <br>
+                            <br>
+                            Morten Thomsen, Global IT Lead
+                        </p>
+                    </div>
+                </div>
+                <!--terza colonna -->
+                <!-- ho usato come tag i nomi delle aziende per comodita' -->
+                <div class="column-partner flex">
+                    <div class="box-partner">
+                        <img class="world-bicycle" src="img/world_bicycle_relief.svg" alt="world_bicycle_relief">
+                    </div>
+                    <div class="box-partner">
+                        <img class="hearst" src="img/hearst_corp.svg" alt="hearst">
+                    </div>
+                    <div class="box-partner">
+                        <img class="lonely" src="img/lonely_planet.svg" alt="lonely_planet">
+                    </div>
+                    <div class="box-partner">
+                        <img class="clear-channel" src="img/clear_channel.svg" alt="clear_channel">    
+                    </div>   
+                </div>
+            </div>
+            <!-- PROVA GRATUITA -->
+            <div class="free-trial ">
+                <div class="flex small-container">
+                    <div class="box-img">
+                        <h4>Porta Dropbox Business nella tua azienda.</h4>
+                    </div>
+                    <div class="box-text">
+                        <div>
+                            <button>Inia la tua prova gratuita</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section></section>
+       
     </main>
     </header>
     <footer></footer>
