--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             <div class="free-trial ">
                 <div class="flex small-container">
                     <div class="box-img">
-                        <h4>Porta Dropbox Business nella tua azienda.</h4>
+                        <h2>Porta Dropbox Business nella tua azienda.</h2>
                     </div>
                     <div class="box-text">
                         <div>
@@ -341,11 +341,100 @@
                 </div>
             </div>
         </section>
-        <section></section>
-       
+        <!-- SIXTH SESSION -->
+        <section class="sixth-session">
+            <div class="small-container">
+                <h2>Domande frequenti</h2>
+                <!--  -->
+                <div class="fqa-box">
+                    <p><a href="#"> Qual e' la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</a> <i class="fa-solid fa-angle-down"></i></p>
+                </div>
+                <!--  -->
+                <div class="fqa-box">
+                    <p><a href="#"> Qual e' la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</a> <i class="fa-solid fa-angle-down"></i></p>
+                </div>
+                <!--  -->
+                <div class="fqa-box">
+                    <p><a href="#"> Qual e' la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</a> <i class="fa-solid fa-angle-down"></i></p>
+                </div>
+            </div>
+        </section>
     </main>
-    </header>
-    <footer></footer>
+    <!-- FOOTER -->
+    <footer>
+        <section>
+            <div class="big-container flex">
+                <div class="flex">
+                    <!-- PRIMA LISTA FOOTER -->
+                    <div class="footer-column">
+                        <div>
+                            <h3>Dropbox</h3>
+                            <ul>
+                                <li><a href="#">Applicazione desktop</a></li>
+                                <li><a href="#">Perche' ropbox</a></li>
+                                <li><a href="#">Piani</a></li>
+                                <li><a href="#">Sicurezza</a></li>
+                                <li><a href="#">funzioni</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!--  -->
+                    <div class="footer-column">
+                        <div>
+                            <h3>Dropbox</h3>
+                            <ul>
+                                <li><a href="#">Applicazione desktop</a></li>
+                                <li><a href="#">Perche' ropbox</a></li>
+                                <li><a href="#">Piani</a></li>
+                                <li><a href="#">Sicurezza</a></li>
+                                <li><a href="#">funzioni</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!--  -->
+                    <div class="footer-column">
+                        <div>
+                            <h3>Dropbox</h3>
+                            <ul>
+                                <li><a href="#">Applicazione desktop</a></li>
+                                <li><a href="#">Perche' ropbox</a></li>
+                                <li><a href="#">Piani</a></li>
+                                <li><a href="#">Sicurezza</a></li>
+                                <li><a href="#">funzioni</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!--  -->
+                    <div class="footer-column">
+                        <div>
+                            <h3>Dropbox</h3>
+                            <ul>
+                                <li><a href="#">Applicazione desktop</a></li>
+                                <li><a href="#">Perche' ropbox</a></li>
+                                <li><a href="#">Piani</a></li>
+                                <li><a href="#">Sicurezza</a></li>
+                                <li><a href="#">funzioni</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!--  -->
+                    <div class="footer-column">
+                        <div>
+                            <h3>Dropbox</h3>
+                            <ul>
+                                <li><a href="#">Applicazione desktop</a></li>
+                                <li><a href="#">Perche' ropbox</a></li>
+                                <li><a href="#">Piani</a></li>
+                                <li><a href="#">Sicurezza</a></li>
+                                <li><a href="#">funzioni</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!--  -->
+                </div>
+            </div>
+    </section>
+    </footer>
     
 </body>
 </html>
